--- a/kevs_frontend/package.json
+++ b/kevs_frontend/package.json
@@ -19,7 +19,8 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "parser": "babel-eslint"
   },
   "browserslist": {
     "production": [
